<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hifisim_task_ros2</name>
  <version>0.0.0</version>
  <description>This is the ROS Component of HiFi_Simulator</description>
  <maintainer email="tslywh@nus.edu.sg">Wayne</maintainer>
  <license>Apache License 2.0</license>
  
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
