<?xml version="1.0"?>
<package format="3">
  <name>unity_bridge</name>
  <version>0.0.1</version>
  <description>Bridge node to adapt Unity simulator topics to EGO-Swarm planner expected topics.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 